--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul class="style-none">
                     <li class="nav-item"><a href="https://taketime98.github.io/">Home</a></li>
                     <li class="nav-item"><a href="https://www.behance.net/tranxuananh5121" target="_blank">Portfolio</a></li>
-                    <li class="nav-item"><a href="Logo-Brief.html" target="_blank">Brief</a></li>
+                    <li class="nav-item"><a href="#" target="_blank">Brief</a></li>
                     <li class="nav-item"><a href="https://take-time-blog.webflow.io/" target="_blank">Blog</a></li>
                     <li class="nav-item"><a href="https://taketime98.github.io/contact.html" target="_blank">Contact</a></li>
 
@@ -122,7 +122,7 @@
 
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link " href="Logo-Brief.html" target="_blank">Brief</a>
+                                    <a class="nav-link " href="#" target="_blank">Brief</a>
 
                                 </li>
                                 <li class="nav-item">
